--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Eric Law",
   "license": "Apache-2.0",
   "dependencies": {
     "moment": "^2.27.0"
