--- a/proxy-config.json
+++ b/proxy-config.json
@@ -4,6 +4,7 @@
     "tag": "inet",
     "index": 1
   },
-  "source_port": 22,
-  "target_port": 22
+  "source_ports": [22, 80, 443],
+  "target_ports": [22, 8080, 8443],
+  "authorized": ["192.168.1.*"]
 }
