--- a/proxy-config.json
+++ b/proxy-config.json
@@ -1,4 +1,4 @@
-{
+i{
   "discovery": {
     "command": "multipass exec main ifconfig eth0",
     "tag": "inet",
@@ -6,5 +6,6 @@
   },
   "source_ports": [22, 80, 443],
   "target_ports": [22, 8080, 8443],
-  "authorized": ["192.168.1.*"]
+  "authorized": ["192.168.1.*"],
+  "restart": 22
 }
