--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Eric Law",
   "license": "Apache-2.0",
   "dependencies": {
-    "moment": "^2.27.0"
+    "moment": "^2.29.1",
+    "moments": "0.0.2"
   }
 }
