--- a/package.json
+++ b/package.json
@@ -8,7 +8,5 @@
   },
   "author": "Eric Law",
   "license": "Apache-2.0",
-  "dependencies": {
-    "moment": "^2.29.1"
-  }
+  "dependencies": { }
 }
