--- a/proxy-config-multipass.json
+++ b/proxy-config-multipass.json
@@ -4,8 +4,8 @@
     "tag": "inet",
     "index": 1
   },
-  "source_ports": [22, 8080, 8443],
-  "target_ports": [22, 8080, 8443],
+  "source_ports": [22],
+  "target_ports": [22],
   "authorized": ["192.168.1.*", "127.0.0.1"],
   "restart": 22
 }
