--- a/proxy-config.json
+++ b/proxy-config.json
@@ -6,6 +6,6 @@
   },
   "source_ports": [22],
   "target_ports": [22],
-  "authorized": ["192.168.1.*", "127.0.0.1", "98.207.165.84"],
+  "authorized": ["192.168.1.*", "127.0.0.1"],
   "restart": 22
 }
