--- a/proxy-config.json
+++ b/proxy-config.json
@@ -1,11 +1,11 @@
 {
   "discovery": {
-    "command": "arp -a",
-    "tag": "172.",
-    "index": 0
+    "command": "multipass exec main ifconfig eth0",
+    "tag": "inet",
+    "index": 1
   },
   "source_ports": [22],
   "target_ports": [22],
-  "authorized": ["192.168.1.*", "127.0.0.1", "98.207.165.84"],
+  "authorized": ["192.168.1.*", "127.0.0.1"],
   "restart": 22
 }
